fixed links in readme

--- a/ProceduralCity.html
+++ b/ProceduralCity.html
@@ -18,11 +18,13 @@
 				When in sky view:<br/>
 				Change City= R<br/>
 				Change Camera Angles= 1,2,3,4,5<br/>
+					Go to First Person With F <br/>
 				</span>
 				<span style="font-size:20px">
 				When in first person:<br/>
 				Move= W,A,S,D<br/>
 				Look: MOUSE<br/>
+					Go back to SkyView With T<br/>
 				</span>
 				<span style="font-size:25px">Click to Continue</span>
 			</div> 
